# icetray-MuonGun

./: .mailinglist  CMakeLists.txt  RELEASE_NOTES
private/MuonGun/: CORSIKAGenerationProbability.cxx  CORSIKAGenerationProbability.h  CanCan.cxx  CanCan.h  CompactTrack.cxx  CompactTrack.h  Cylinder.cxx  Cylinder.h  Distribution.cxx  Distribution.h  EnergyDependentSurfaceInjector.cxx  EnergyDependentSurfaceInjector.h  EnergyDistribution.cxx  EnergyDistribution.h  EnsembleSampler.h  ExtrudedPolygon.cxx  Floodlight.cxx  Floodlight.h  Flux.cxx  Flux.h  Generator.cxx  Generator.h  I3MuonGun.cxx  I3MuonGun.h  MultiplicityFraction.cxx  MultiplicityFraction.h  MuonPropagator.cxx  MuonPropagator.h  Muonitron.cxx  Muonitron.h  NaturalRateInjector.cxx  NaturalRateInjector.h  RadialDistribution.cxx  RadialDistribution.h  SamplingSurface.cxx  SingleMuonFlux.cxx  SingleMuonFlux.h  SplineTable.cxx  SplineTable.h  StaticSurfaceInjector.cxx  (+11 more)
private/cubature/: cubature.c
private/pybindings/: CMakeLists.txt  CORSIKAGenerationProbability.cxx  CanCan.cxx  CompactTrack.cxx  EnergyDistribution.cxx  Flux.cxx  Generator.cxx  I3MuonGun.cxx  Injectors.cxx  MuonPropagator.cxx  RadialDistribution.cxx  SingleMuonFlux.cxx  Surface.cxx  Track.cxx  TrackBinner.cxx  WeightCalculator.cxx  histogram.cxx  module.cxx  utils.h
private/simclasses/: AxialCylinder.cxx  Cylinder.cxx  ExtrudedPolygon.cxx  SamplingSurface.cxx  Sphere.cxx  Surface.cxx  polygon.cxx
private/test/: DepthTest.cxx  EnergyDistribution.cxx  EnsembleSampler.cxx  Generator.cxx  SplineTable.cxx  Surface.cxx  common.h
public/MuonGun/: Cylinder.h  EnergyDistribution.h  ExtrudedPolygon.h  Flux.h  Generator.h  I3MuonGun.h  RadialDistribution.h  SamplingSurface.h  Surface.h  Track.h  UprightSurface.h
public/simclasses/: AxialCylinder.h  Cylinder.h  ExtrudedPolygon.h  SamplingSurface.h  Sphere.h  Surface.h
public/simclasses/detail/: CylinderBase.h  ExtrudedPolygonBase.h  polygon.h
python/: __init__.py  extruded_polygon.py  fluxes.py  segments.py  weighting.py
resources/condor/: build_dcorsika_histograms.py  build_dcorsika_histograms.sh  glowsika.sh  glowsika.sub
resources/docs/: available_flux_parameterizations.rst  index.rst  rationale.rst  weighting.rst
resources/examples/: generate_floodlight.py  generate_single_muons.py  plot_injected_tracks.py  plot_livetime.py  weighting_demo.py
resources/scripts/: dashi-histadd.py  fill_histograms.py  fill_histograms_dCORSIKA.py  histreduce.py  propagate_and_fill.py  propagate_muons.py  shower_and_propagate.py  utils.py
resources/scripts/fitting/: Makefile  demo_plots.py  fit.sh  fit_edist.py  fit_flux.py  fit_rdist.py  utils.py
resources/test/: extruded_polygon.py  test_StaticSurfaceInjector.py  test_serialization.py  utils.py
